# iis3dwb-esp-idf

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
components/esp32_bus/: CMakeLists.txt  esp32_bus.c  esp32_bus.h
main/: CMakeLists.txt  iis3dwb_self_test.c
